Vulnerability/Stats: Flesh out a little

--- a/private/templates/IFRC/tasks.cfg
+++ b/private/templates/IFRC/tasks.cfg
@@ -99,5 +99,8 @@ survey,formatter,ADAT/MCRS-Annex1.xls.Layout.csv,formatter.xsl
 "project","theme",project_theme.csv,theme.xsl
 "project","beneficiary_type",project_beneficiary_type.csv,beneficiary_type.xsl
 # -----------------------------------------------------------------------------
+# Vulnerability
+"stats","demographic",stats_demographic.csv,demographic.xsl
+# -----------------------------------------------------------------------------
 # Offices
 org,office,office.csv,office.xsl
