--- a/private/templates/IFRC_Train/tasks.cfg
+++ b/private/templates/IFRC_Train/tasks.cfg
@@ -78,6 +78,9 @@ project,hazard,IFRC/project_hazard.csv,hazard.xsl
 project,theme,IFRC/project_theme.csv,theme.xsl
 project,beneficiary_type,IFRC/project_beneficiary_type.csv,beneficiary_type.xsl
 # -----------------------------------------------------------------------------
+# Vulnerability
+"stats","demographic",IFRC/stats_demographic.csv,demographic.xsl
+# -----------------------------------------------------------------------------
 # Offices
 org,office,IFRC/office.csv,office.xsl
 org,office,office.csv,office.xsl
