Prepop of vulnerability data Fix a few selenium tests Fix some bugs raised by smoke tests

--- a/private/templates/IFRC_Train/tasks.cfg
+++ b/private/templates/IFRC_Train/tasks.cfg
@@ -78,9 +78,6 @@ project,hazard,IFRC/project_hazard.csv,hazard.xsl
 project,theme,IFRC/project_theme.csv,theme.xsl
 project,beneficiary_type,IFRC/project_beneficiary_type.csv,beneficiary_type.xsl
 # -----------------------------------------------------------------------------
-# Vulnerability
-"stats","demographic",IFRC/stats_demographic.csv,demographic.xsl
-# -----------------------------------------------------------------------------
 # Offices
 org,office,IFRC/office.csv,office.xsl
 org,office,office.csv,office.xsl
@@ -150,4 +147,8 @@ survey,formatter,ADAT/MCRS-Annex1.xls.Layout.csv,formatter.xsl
 #survey,complete,ADAT/Tropical Storm Bulegila 2012(24H B)-Data.csv,complete.xsl
 # Just the 1st record
 survey,complete,24H-TL-Data.csv,complete.xsl
+# -----------------------------------------------------------------------------
+# Vulnerability
+# Add sample locations, the indicators and data
+vulnerability,data,Vulnerability/data.csv,data.xsl
 # END -------------------------------------------------------------------------
