* Adjusting position of HRM site_id (I think I forgot to do this in my last revision - is this OK?) * Change label for consistency: Job Title -> Job Role * Change hrm_experience.job_title -> job_role for consistency (Or does this need to include external positions?) * Help text for Volunteer Active field --- * Fixed  virtual fields for Project Reports * s3report: Avoid the need to explicitly define report_fields or report_fields, This can be an issue if any of the rows/cols fields are not in list_fields or list_fields is not defined. Dominic to review * report_options for Funding Report * Fixing Partner Organisations controller * Project Beneficiary Dates are not required * Aligning Project Beneficiary field names to become components of stats_data / stats_parameter * Error in http://127.0.0.1:8000/eden/org/organisation.xml * Starting work on IFRC_roles test (On Going) --- * Fixed  virtual fields for Project Reports * s3report: Avoid the need to explicitly define report_fields or report_fields, This can be an issue if any of the rows/cols fields are not in list_fields or list_fields is not defined. Dominic to review * report_options for Funding Report * Fixing Partner Organisations controller * Project Beneficiary Dates are not required * Aligning Project Beneficiary field names to become components of stats_data / stats_parameter * Error in http://127.0.0.1:8000/eden/org/organisation.xml * Added Extra Fields to project_task tempalte * Starting work on IFRC_roles test (On Going) --- * Merged HTML/JS/CSS for Vulnerability Map (/eden/vulnerability/map) - (On Going)

--- a/static/scripts/tools/sahana.js.cfg
+++ b/static/scripts/tools/sahana.js.cfg
@@ -23,6 +23,7 @@ jquery.ui.menu.js
 jquery.ui.autocomplete.js
 jquery.ui.timepicker.js
 jquery.ui.sortable.js
+jquery.ui.selectmenu.js
 jquery.ui.draggable.js
 jquery.ui.droppable.js
 jquery.ui.accordion.js
