--- a/private/templates/IFRC_Train/tasks.cfg
+++ b/private/templates/IFRC_Train/tasks.cfg
@@ -23,7 +23,7 @@ auth,user,users.csv,user.xsl
 # Org
 org,sector,IFRC/org_sector.csv,sector.xsl
 org,organisation_type,default/organisation_type.csv,organisation_type.xsl
-org,office_type,default/office_type.csv,office_type.xsl
+org,office_type,IFRC/office_type.csv,office_type.xsl
 org,organisation,IFRC/organisation.csv,organisation.xsl
 auth,organisation,IFRC/organisation.csv,organisation.xsl
 # -----------------------------------------------------------------------------
