Vulnerability - Reports DataTables - fixes A few bug fixes

--- a/private/templates/IFRC_Train/tasks.cfg
+++ b/private/templates/IFRC_Train/tasks.cfg
@@ -89,7 +89,8 @@ asset,asset,asset.csv,asset.xsl
 # Human Resources
 hrm,skill,default/DefaultSkillList.csv,skill.xsl
 hrm,competency_rating,default/DefaultSkillCompetency.csv,competency_rating.xsl
-hrm,person,people.csv,person.xsl
+hrm,person,staff.csv,person.xsl,"{'Type':'Staff'}"
+hrm,person,volunteers.csv,person.xsl,"{'Type':'Volunteer'}"
 # User accounts need Orgs too for Testing
 hrm,person,users.csv,person.xsl
 hrm,training,training.csv,training.xsl
@@ -154,10 +155,11 @@ survey,formatter,ADAT/MCRS-Annex1.xls.Layout.csv,formatter.xsl
 survey,complete,24H-TL-Data.csv,complete.xsl
 # -----------------------------------------------------------------------------
 # Vulnerability
+doc,source_type,Vulnerability/doc_source_type.csv,source_type.xsl
 # Add sample locations, the indicators and data
 vulnerability,aggregated_indicator,Vulnerability/aggregated_indicator.csv,aggregated_indicator.xsl
 vulnerability,indicator,Vulnerability/indicator.csv,indicator.xsl
-vulnerability,data,Vulnerability/data.csv,data.xsl
+vulnerability,data,Vulnerability/vulnerability_data.csv,data.xsl
 # Demographics (needs to be after Vulnerability)
 "stats","demographic",IFRC/stats_demographic.csv,demographic.xsl
 "stats","demographic_data",Vulnerability/demographic_data.csv,demographic_data.xsl
