--- a/private/templates/IFRC_Train/tasks.cfg
+++ b/private/templates/IFRC_Train/tasks.cfg
@@ -154,7 +154,7 @@ survey,formatter,ADAT/MCRS-Annex1.xls.Layout.csv,formatter.xsl
 survey,complete,24H-TL-Data.csv,complete.xsl
 # -----------------------------------------------------------------------------
 # Vulnerability
-doc,source_type,Vulnerability/doc_source_type.csv,source_type.xsl
+stats,group_type,Vulnerability/stats_group_type.csv,group_type.xsl
 # Add sample locations, the indicators and data
 vulnerability,aggregated_indicator,Vulnerability/aggregated_indicator.csv,aggregated_indicator.xsl
 vulnerability,indicator,Vulnerability/indicator.csv,indicator.xsl
