--- a/private/templates/IFRC_Train/tasks.cfg
+++ b/private/templates/IFRC_Train/tasks.cfg
@@ -160,6 +160,7 @@ vulnerability,aggregated_indicator,Vulnerability/aggregated_indicator.csv,aggreg
 vulnerability,indicator,Vulnerability/indicator.csv,indicator.xsl
 vulnerability,data,Vulnerability/vulnerability_data.csv,data.xsl
 # Demographics (needs to be after Vulnerability)
-"stats","demographic",IFRC/stats_demographic.csv,demographic.xsl
-"stats","demographic_data",Vulnerability/demographic_data.csv,demographic_data.xsl
+stats,demographic,IFRC/stats_demographic.csv,demographic.xsl
+stats,demographic_data,Vulnerability/demographic_data.csv,demographic_data.xsl
+#*,stats_rebuild_aggregates,
 # END -------------------------------------------------------------------------
